--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,11 +10,11 @@ jobs:
           name: Validate base
           command: |
             packer validate \
-            -var "aws_region=${AWS_REGION}" \
-            -var "aws_access_key=${AWS_ACCESS_KEY_ID}" \
-            -var "aws_secret_key=${AWS_SECRET_ACCESS_KEY}" \
-            -var "source_ami=${SOURCE_AMI}" \
-            -var "subnet_id=${SUBNET_ID}" \
+            -var "aws_region=${aws_region}" \
+            -var "aws_access_key=${aws_access_key}" \
+            -var "aws_secret_key=${aws_secret_key}" \
+            -var "source_ami=${source_ami}" \
+            -var "subnet_id=${subnet_id}" \
             ubuntu-ami.json
 workflows:
   version: 2
