--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,6 +16,16 @@ jobs:
             -var "source_ami=${source_ami}" \
             -var "subnet_id=${subnet_id}" \
             ubuntu-ami.json
+      - run:
+          name: Packer Build
+          command: |
+            packer build \
+            -var "aws_region=${aws_region}" \
+            -var "aws_access_key=${aws_access_key}" \
+            -var "aws_secret_key=${aws_secret_key}" \
+            -var "source_ami=${source_ami}" \
+            -var "subnet_id=${subnet_id}" \
+            ubuntu-ami.json
 workflows:
   version: 2
   build_deploy:
