--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,6 +15,7 @@ jobs:
             -var "aws_secret_key=${aws_secret_key}" \
             -var "source_ami=${source_ami}" \
             -var "subnet_id=${subnet_id}" \
+            -var "ami_users=${ami_users}" \
             ubuntu-ami.json
       - run:
           name: Packer Build
@@ -25,6 +26,7 @@ jobs:
             -var "aws_secret_key=${aws_secret_key}" \
             -var "source_ami=${source_ami}" \
             -var "subnet_id=${subnet_id}" \
+            -var "ami_users=${ami_users}" \
             ubuntu-ami.json
 workflows:
   version: 2
